feat(BfsWebCrawler): add maximum depth limit for crawling and improve error handling